eks-cluster.tf
resource "aws_instance" "Ngninx-instance" {
  ami                    = "ami-0d940f23d527c3ab1" # Specify the AMI ID for your desired operating system
  instance_type          = "t2.micro"              # Specify the instance type
  subnet_id              = aws_subnet.subnet1.id   # Specify the subnet ID
  key_name               = "ireland-key"           # If using SSH key pair
  vpc_security_group_ids = [aws_security_group.security.id]
  user_data              = <<-EOF
               #!/bin/bash

               curl -O https://s3.us-west-2.amazonaws.com/amazon-eks/1.27.1/2023-04-19/bin/linux/amd64/kubectl
               curl -O https://s3.us-west-2.amazonaws.com/amazon-eks/1.27.1/2023-04-19/bin/linux/amd64/kubectl.sha256
               sha256sum -c kubectl.sha256
               openssl sha1 -sha256 kubectl
               chmod +x ./kubectl
               mkdir -p $HOME/bin && cp ./kubectl $HOME/bin/kubectl && export PATH=$HOME/bin:$PATH
               echo 'export PATH=$HOME/bin:$PATH' >> ~/.bashrc
               kubectl version --short --client

               curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
               sudo mv /tmp/eksctl /usr/local/bin
               eksctl version

               curl -Lo aws-iam-authenticator https://github.com/kubernetes-sigs/aws-iam-authenticator/releases/download/v0.5.9/aws-iam-authenticator_0.5.9_linux_amd64
               openssl sha1 -sha256 aws-iam-authenticator
               chmod +x ./aws-iam-authenticator
               mkdir -p $HOME/bin && cp ./aws-iam-authenticator $HOME/bin/aws-iam-authenticator && export PATH=$HOME/bin:$PATH
               echo 'export PATH=$HOME/bin:$PATH' >> ~/.bashrc
               aws-iam-authenticator help

               eksctl create cluster --name anis-cluster --region eu-west-1 --version 1.26 --node-type t2.micro --nodes 1

               EOF
  tags = {
    Name = "Ngninx-instannce"
  }
}
